Se agrego un login y un formulario para los articulos, falta hacer el modelo de articulos en la bd  e implementar el zend framework

--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -24,7 +24,6 @@
           type="text/css">
 
 
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -122,7 +121,7 @@
                         <li><a href="personal.html">Personal</a></li>
 
                         <li><a href="#about">Conocenos</a></li>
-                        <li><a href="login.html">Iniciar sesión</a></li>
+                        <li><a href="login.php">Iniciar sesión</a></li>
                     </ul>
 
                 </li>
@@ -241,7 +240,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/geometronix2-tablet.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/geometronix-fix.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -251,7 +250,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/unoaritmetico2-tablet.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/unoaritmetico-fix.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -261,7 +260,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/quitaypon-iphone.png" class="img-responsive" alt="">
+                    <img src="../img/juegos/quitaypon-fix.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -271,7 +270,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/warfare-phone.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/warfare-fix.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -281,7 +280,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/fracciones2-en-iphone-plus.png" class="img-responsive" alt="">
+                    <img src="../img/juegos/fracciones-fix.jpg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -291,7 +290,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="../img/juegos/cuantofalta-fixed.jpg" class="img-responsive" alt="">
+                    <img src="../img/juegos/cuantofalta-fix.jpg" class="img-responsive" alt="">
                 </a>
             </div>
         </div>
